--- a/styles.css
+++ b/styles.css
@@ -39,15 +39,14 @@ body {
 .settings {
     display: flex;
     width: 480px;
-    flex: 1;
-    flex-wrap: wrap;
     margin-top: 4em;
-    justify-content: center;
-    
+    flex-direction: column;
+    align-items: center;
 }
 
 .settings button,
-.colors {
+.colors,
+.slide-container {
     padding: 10px;
     padding-left: 1.7em;
     padding-right: 1.7em;
@@ -60,7 +59,6 @@ body {
 
 .settings div {
     display: flex;
-    align-items: flex-start;
     padding-top: 0;
     padding-bottom: 0;
 }
@@ -80,6 +78,19 @@ body {
     width: 200px;
 }
 
+.slide-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    padding: 2em;
+    width: 200px;
+}
+
+.slider {
+    width: 100%;
+}
+
 .colors div {
     display: flex;
     width: 100%;
@@ -89,14 +100,20 @@ body {
 
 .other-settings {
     display: flex;
+    flex-wrap: wrap;
+    height: 80px;
 }
 
 button:hover {
     background-color: orange;
 }
 
+.slide-container:hover,
+.colors:hover {
+    background-color: orange;
+}
+
 p {
     padding: 0;
-    margin: 0;
 }
 
