--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     justify-content: center;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #B37C57;
-    color:#FEF7F8
+    color:#FEF7F8;
 } 
 /* Code for the grid */
 :root {
@@ -111,5 +111,18 @@ button:hover {
 
 p {
     padding: 0;
+}
+
+/*Footer*/
+.footer {
+    margin-top: 4em;
+}
+
+a:link {
+    color:#FEF7F8;
+}
+
+a:visited {
+    color:#FEF7F8;
 }
 
